--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Razo Trans Utility">
+    <meta name="description" content="Optimista">
     <!-- <meta name="author" content="Łukasz Holeczek"> -->
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
-    <title>Razo Trans Utility Pvt Ltd</title>
+    <title>Optimista Pvt Ltd</title>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
